[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh0sty"
version = "1.0.0"
description = "A professional, modular information gathering and security auditing framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jackson F Bertoldo", email = "jackson@example.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "dnspython>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.20240125",
]

[project.scripts]
gh0sty = "gh0sty.cli:main"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "RET", "SIM", "ARG", "PTH", "ERA", "PL"]
ignore = ["S101", "PLR0913", "PLR0915", "PLR0912", "S113", "S311", "PLW2901"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
